# SALIDtranslit

./: LICENSE  README.md  pyproject.toml
data/: evaluation_set.csv
src/salidtranslit/: __init__.py  core.py  model.py  reference.py  transliterate.py  trie.py
src/salidtranslit/ScriptMap/: bengali.json  devanagari.json  iast.json  itrans.json
src/salidtranslit/mt5_finetuned/: config.json  model.safetensors
tests/: test.py
